--- a/dports/cad/gtkwave/Portfile
+++ b/dports/cad/gtkwave/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name		gtkwave
-version		3.3.10
+version		3.3.11
 categories	cad
 platforms	darwin
 maintainers	gwright
@@ -16,12 +16,15 @@ long_description	\
 homepage	http://gtkwave.sourceforge.net
 master_sites	${homepage}/
 
-checksums	md5     4e5e0a14ca52463fdbc4b69a47b87c6a \
-		sha1    dd06a067621cbe80f655f4c3d4c0e01d12117618 \
-		rmd160  d5d0e974713cfaa811c04c93044247e8ceba565d
+checksums	md5     9ebbb90b673a4006ce64ecda86baa76f \
+		sha1    e4377d35ca99294edbeaebe19375f290b72fe3ca \
+		rmd160  e5d388fd124034954cb1ee093d4c3f9aff6d8fe2
 
 depends_lib	port:gtk2	\
-		port:liblzma
+		port:liblzma	\
+		port:tk
 
-configure.args	--mandir=\\\${prefix}/share/man
+configure.args	--mandir=\\\${prefix}/share/man	\
+		--with-tcl=${prefix}/lib	\
+		--with-tk=${prefix}/lib
 
