--- a/dports/editors/vim-app/Portfile
+++ b/dports/editors/vim-app/Portfile
@@ -148,7 +148,7 @@ variant perl description {Enable Perl scripting} {
     depends_lib-append      path:bin/perl:perl5
 }
 variant python requires python25 description {Compatibility variant, requires +python25} {}
-variant python25 conflicts python26 description {Enable Python scripting} {
+variant python25 conflicts python26 python31 description {Enable Python scripting} {
     configure.args-append   --enable-pythoninterp --with-python=${prefix}/bin/python2.5
     patchfiles-append       patch-python.diff
     depends_lib-append      port:python25
@@ -157,10 +157,19 @@ variant python25 conflicts python26 description {Enable Python scripting} {
     # Overwriting autoconf.cmd above removes dependency, add it again
     depends_build-append port:autoconf
 }
-variant python26 conflicts python25 description {Enable Python scripting} {
+variant python26 conflicts python25 python31 description {Enable Python scripting} {
     configure.args-append   --enable-pythoninterp --with-python=${prefix}/bin/python2.6
     patchfiles-append       patch-python.diff
     depends_lib-append      port:python26
+
+    use_autoconf yes
+    # Overwriting autoconf.cmd above removes dependency, add it again
+    depends_build-append port:autoconf
+}
+variant python31 conflicts python25 python26 description {Enable Python scripting} {
+    configure.args-append   --enable-python3interp --with-python=${prefix}/bin/python3.1
+    patchfiles-append       patch-python3.diff
+    depends_lib-append      port:python31
 
     use_autoconf yes
     # Overwriting autoconf.cmd above removes dependency, add it again
