lang/ruby19: upgrade to 1.9.2-p0
    [NOTE] "lib/ruby/" path was changed from 1.9.2-p0.
	       1.9.1 - lib/ruby1.9/ (-nosuffix)
	       1.9.2 - lib/ruby/    (+-nosuffix)
           we might need to reinstall port:rb19-*.


git-svn-id: https://svn.macports.org/repository/macports/trunk@70729 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/ruby19/Portfile
+++ b/dports/lang/ruby19/Portfile
@@ -3,7 +3,7 @@
 PortSystem			1.0
 
 name				ruby19
-version				1.9.1-p430
+version				1.9.2-p0
 revision			0
 
 categories			lang ruby
@@ -25,40 +25,34 @@ master_sites		ruby:1.9
 use_bzip2			yes
 distname			ruby-${version}
 
-checksums			md5 f855103aebeb3318dccb409319b547a0 \
-					rmd160 fe2afc89ea23a159536bb70345a60acb9043b930 \
-					sha1 a92cf87d633817cf2aabae42f8ede2f61bd9ae3a
+checksums			md5 d8a02cadf57d2571cd4250e248ea7e4b \
+					rmd160 dc15937c884b0f93863e9871304bae95e1233e15 \
+					sha1 c0fc7e1047f1eac7e554e9818513593b0d398698
 use_parallel_build	yes
 
 depends_lib			port:libiconv \
 					port:readline \
 					port:openssl \
 					port:zlib \
-					port:ncurses
+					port:ncurses \
+					port:libyaml
 
 configure.args		--enable-shared \
 					--mandir="${prefix}/share/man" \
 					--enable-pthread \
 					--without-tk \
 					--program-suffix=1.9
-# [ruby-core:29427]: on some Mac, TCPServer.open("localhost", 0) raises
-#         SocketError "getaddrinfo: nodename nor servname provided, or not
-#         known (SocketError)"
-#         http://redmine.ruby-lang.org/issues/show/3124
-#         (note: 1.9.2 does not need this patch)
-# #25611: build failure with openssl 1.0.0
-#         patch from http://redmine.ruby-lang.org/issues/show/2022
-#         (note: 1.9.2 does not need this patch)
-patchfiles			patch-ruby_core_29427.diff \
-					patch-bug25611.diff
 
 # Ignore minor version for archdir, like i686-darwin9.
 # Port "ruby" does the same.
 configure.env		UNAME_RELEASE=${os.major}
 
 post-destroot {
+	# [NOTE] "lib/ruby/" path was changed from 1.9.2-p0
+	#     1.9.1 - lib/ruby1.9/ (-nosuffix)
+	#     1.9.2 - lib/ruby/    (+-nosuffix)
 	foreach type {site vendor} {
-			set libdir ${destroot}${prefix}/lib/ruby1.9/${type}_ruby
+			set libdir ${destroot}${prefix}/lib/ruby/${type}_ruby/1.9.1
 			xinstall -m 0755 -d ${libdir}
 			xinstall -m 0644 ${filespath}/${type}-specific.rb ${libdir}
 	}
