Better way to retrieve phonon version info. Fixes phonon header file containing phonon version.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70730 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/qt4-mac/Portfile
+++ b/dports/aqua/qt4-mac/Portfile
@@ -46,24 +46,37 @@ patchfiles          patch-precomp.test.diff \
                     patch-qaudioinput-readyread.diff \
                     patch-qaudiooutput-period-size.diff
 
-post-extract {
+post-patch {
     # correct phonon version info.
     # (1) retrieve the correct info (minor, patch)
+    set phonon_major_version \
+        [exec grep "set\[^\\$\]*PHONON_LIB_MAJOR_VERSION" \
+             ${worksrcpath}/src/3rdparty/phonon/CMakeLists.txt | \
+             grep set | tr -dc '\[0-9\]']
     set phonon_minor_version \
-        [exec grep PHONON_LIB_MINOR_VERSION \
+        [exec grep "set\[^\\$\]*PHONON_LIB_MINOR_VERSION" \
              ${worksrcpath}/src/3rdparty/phonon/CMakeLists.txt | \
              grep set | tr -dc '\[0-9\]']
     set phonon_patch_version \
-        [exec grep PHONON_LIB_PATCH_VERSION \
+        [exec grep "set\[^\\$\]*PHONON_LIB_PATCH_VERSION" \
              ${worksrcpath}/src/3rdparty/phonon/CMakeLists.txt | \
              grep set | tr -dc '\[0-9\]']
 
     # (2) correct that which Qt uses
+    # (a) in src/phonon/phonon.pro
     # (there has GOT to be a better way :)
     reinplace "/PHONON_MINOR_VERSION =/s@\\(\[^0-9\]*\\)\[0-9\]*\\(\[^0-9\]*\\)@\\1${phonon_minor_version}\\2@" \
         ${worksrcpath}/src/phonon/phonon.pro
     reinplace "/PHONON_PATCH_VERSION =/s@\\(\[^0-9\]*\\)\[0-9\]*\\(\[^0-9\]*\\)@\\1${phonon_patch_version}\\2@" \
         ${worksrcpath}/src/phonon/phonon.pro
+
+    # (b) in src/3rdparty/phonon/phonon/phononnamespace.h
+    # use the .h.in file & sed replace variables
+    system "sed -e 's/@PHONON_LIB_MAJOR_VERSION@/${phonon_major_version}/g' \
+-e 's/@PHONON_LIB_MINOR_VERSION@/${phonon_minor_version}/g' \
+-e 's/@PHONON_LIB_PATCH_VERSION@/${phonon_patch_version}/g' \
+< ${worksrcpath}/src/3rdparty/phonon/phonon/phononnamespace.h.in \
+> ${worksrcpath}/src/3rdparty/phonon/phonon/phononnamespace.h"
 }
 
 # The build process uses -fconstant-cfstrings.
