lang/ruby: upgrade to 1.9.2-p0_1, use lib/ruby1.9 for libraries (same as 1.9.1)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70731 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/ruby19/Portfile
+++ b/dports/lang/ruby19/Portfile
@@ -4,7 +4,7 @@ PortSystem			1.0
 
 name				ruby19
 version				1.9.2-p0
-revision			0
+revision			1
 
 categories			lang ruby
 maintainers			kimuraw openmaintainer
@@ -41,18 +41,16 @@ configure.args		--enable-shared \
 					--mandir="${prefix}/share/man" \
 					--enable-pthread \
 					--without-tk \
-					--program-suffix=1.9
+					--program-suffix=1.9 \
+					--with-rubylibprefix=${prefix}/lib/ruby1.9
 
 # Ignore minor version for archdir, like i686-darwin9.
 # Port "ruby" does the same.
 configure.env		UNAME_RELEASE=${os.major}
 
 post-destroot {
-	# [NOTE] "lib/ruby/" path was changed from 1.9.2-p0
-	#     1.9.1 - lib/ruby1.9/ (-nosuffix)
-	#     1.9.2 - lib/ruby/    (+-nosuffix)
 	foreach type {site vendor} {
-			set libdir ${destroot}${prefix}/lib/ruby/${type}_ruby/1.9.1
+			set libdir ${destroot}${prefix}/lib/ruby1.9/${type}_ruby/1.9.1
 			xinstall -m 0755 -d ${libdir}
 			xinstall -m 0644 ${filespath}/${type}-specific.rb ${libdir}
 	}
