math/eigen: update to 2.0.15
git-svn-id: https://svn.macports.org/repository/macports/trunk@70732 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/eigen/Portfile
+++ b/dports/math/eigen/Portfile
@@ -4,7 +4,7 @@ PortSystem          1.0
 PortGroup           cmake 1.0
 
 name                eigen
-version             2.0.14
+version             2.0.15
 license             GPL-2+ LGPL-3+
 categories          math science
 maintainers         nomaintainer
@@ -17,8 +17,9 @@ master_sites        http://bitbucket.org/eigen/eigen/get/
 distname            ${version}
 use_bzip2           yes
 
-checksums           sha1    a48526bd92722170b6d458cc8a6a72c9433c9dcb \
-                    rmd160  ac37cefec85cfa70497ed238770d05dee22ce611
+checksums           md5     390a8c72a0ac79ce6766d84ffeaf4ebc \
+                    sha1    25f38a50939b35e482b22221998d862b860dbe9e \
+                    rmd160  0f94999dbb90c4a4a09b4e38f36edec17d1eb1db
 
 worksrcdir          ${name}
 
