added libsdl dependency
git-svn-id: https://svn.macports.org/repository/macports/trunk@70734 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/tiemu3/Portfile
+++ b/dports/math/tiemu3/Portfile
@@ -32,10 +32,12 @@ depends_lib         port:libiconv \
                     port:libticalcs2 \
                     port:gettext \
                     port:gtk2 \
-                    port:libglade2
+                    port:libglade2 \
+                    port:libsdl
 
 patchfiles			patch-keynames-c.diff \
                     patch-tiemu3.diff
+
 patch.pre_args      -p1
 
 configure.args-append		--without-kde --disable-debugger --disable-gdb
