--- a/dports/net/libnice/Portfile
+++ b/dports/net/libnice/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            libnice
-version         0.0.9
+version         0.0.12
 description     Libnice is an implementation of the IETF's draft Interactice \
                 Connectivity Establishment standard (ICE).
 long_description \
@@ -17,16 +17,23 @@ platforms       darwin
 homepage        http://nice.freedesktop.org/wiki/
 master_sites    http://nice.freedesktop.org/releases/
 
-checksums       md5     19ac2565ee7487c1f32487b948110b19 \
-                sha1    821cbeeb972874855724d8a9cfbaaa3086f62881 \
-                rmd160  4b8f7e7f72dffa5af2d4ba251a18f8ab022d4d48
+checksums       md5     fe25005032c441ecfaa0c19ac6b78ee7 \
+                sha1    839b88f01ebf92e1cc2b6696b91ff556f2f3e40c \
+                rmd160  934866ac2e1340391cf3ec5ac670cd2683cc9979
 
 depends_build   port:pkgconfig \
                 port:gtk-doc
 
 depends_lib     port:gst-plugins-base
 
-configure.args  --disable-gupnp
+#
+# gst-plugins-base is not universal
+#
+
+universal_variant   no
+
+configure.args  --disable-gupnp \
+                --with-gstreamer
 
 livecheck.type  regex
 livecheck.url   ${master_sites}
