farsight2: update to version 0.0.21. add +python variant to enable python bindings.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70736 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/comms/farsight2/Portfile
+++ b/dports/comms/farsight2/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            farsight2
-version         0.0.16
+version         0.0.21
 description     Farsight - Audio/Video Communications Framework
 long_description \
                 The Farsight project is an effort to create a framework \
@@ -18,23 +18,41 @@ platforms       darwin
 homepage        http://farsight.freedesktop.org/wiki/
 master_sites    http://farsight.freedesktop.org/releases/${name}/
 
-checksums       md5     ca6261e19cfcfe8a6e5e51b8c2f5ad16 \
-                sha1    dd25428cb38cc54169db6e8022ed49bc7d609d5b \
-                rmd160  20b7e7f81365aac8147a331a6c49baaadf6f46a9
+checksums       md5     5898612c389f3538a4160e677c03087a \
+                sha1    baf51f52eeeb81214b376ce1b9f33a22ccac7298 \
+                rmd160  198feb04be765cae836c09cc3492842e1788e56b
 
 depends_build   port:pkgconfig \
-                port:gtk-doc \
-                port:python25
+                port:gtk-doc
 
-depends_lib     port:gst-plugins-base \
-                port:gst-plugins-farsight \
-                port:libnice
+depends_lib     port:libnice
 
-configure.python ${prefix}/bin/python2.5
+#
+# libnice is not universal
+#
+universal_variant   no
+
+patchfiles      patch-python-pyfarsightmodule.c.diff \
+                patch-configure.diff
+
+post-patch      {
+                    reinplace "s|__MP_PYTHON_PREFIX__|${frameworks_dir}/Python.framework/Versions/2.6|" ${worksrcpath}/configure
+                }
+
+configure.python ${prefix}/bin/python2.6
 
 configure.args  --disable-gupnp \
                 --disable-python \
-                --disable-shave
+                --disable-silent-rules \
+                --disable-valgrind
+
+variant python description {Enable bulding of Python bindings} {
+                configure.args-delete       --disable-python
+                depends_lib-append          port:py26-gst-python
+                set python_pkg_config_path  ${frameworks_dir}/Python.framework/Versions/2.6/lib/pkgconfig
+                configure.args-append       --with-pkg-config-path=${python_pkg_config_path}
+                build.env-append            PKG_CONFIG_PATH=${python_pkg_config_path}
+}
 
 livecheck.type  regex
 livecheck.url   ${master_sites}
