telepathy-farsight: update to version 0.0.14, add +python variant to enable python bindings.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70739 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/comms/telepathy-farsight/Portfile
+++ b/dports/comms/telepathy-farsight/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            telepathy-farsight
-version         0.0.12
+version         0.0.14
 description     The ${name} component of Telepathy - a Flexible Communications Framework
 long_description \
                 The ${name} component of Telepathy - a Flexible Communications Framework. \
@@ -18,21 +18,40 @@ platforms       darwin
 homepage        http://telepathy.freedesktop.org/wiki/
 master_sites    http://telepathy.freedesktop.org/releases/${name}/
 
-checksums       md5     1605a4c411ca1d26c3e395d8c69ccf3f \
-                sha1    9343a85e1aac4fb2ae59389a638b8f3860a3f3f2 \
-                rmd160  887a84d7d9c08b9aa15fb616d567a278ec99239a
+checksums       md5     1e6af31be4d5cdfc72a3f06542de96c0 \
+                sha1    6a9f6f421af2f5ce5ec3b01fd8ff713ebb06ba95 \
+                rmd160  0803a38a691093ecc370ebbc4634664c30e6826b
 
 depends_build   port:pkgconfig \
                 port:gtk-doc \
-                port:python25
 
 depends_lib     port:telepathy-glib \
-                port:farsight2 \
-                port:py25-gst-python
+                port:farsight2
 
-configure.python ${prefix}/bin/python2.5
+#
+# farsight2 is not universal
+#
+universal_variant   no
 
-configure.args  --disable-python
+patchfiles      patch-python-pytpfarsightmodule.c.diff \
+                patch-configure.diff
+
+post-patch      {
+                    reinplace "s|__MP_PYTHON_PREFIX__|${frameworks_dir}/Python.framework/Versions/2.6|" ${worksrcpath}/configure
+                }
+
+configure.python ${prefix}/bin/python2.6
+
+configure.args  --disable-python \
+                --disable-silent-rules
+
+variant python description {Enable building of Python bindings} {
+                configure.args-delete       --disable-python
+                depends_lib-append          port:py26-gst-python
+                set python_pkg_config_path  ${frameworks_dir}/Python.framework/Versions/2.6/lib/pkgconfig
+                configure.pkg_config_path   ${python_pkg_config_path}
+                build.env-append            PKG_CONFIG_PATH=${python_pkg_config_path}
+}
 
 livecheck.type  regex
 livecheck.url   ${master_sites}
