telepathy-haze: update to version 0.4.0, use python26.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70740 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/comms/telepathy-haze/Portfile
+++ b/dports/comms/telepathy-haze/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            telepathy-haze
-version         0.3.2
+version         0.4.0
 description     The ${name} component of Telepathy - a Flexible Communications Framework
 long_description \
                 The ${name} component of Telepathy - a Flexible Communications Framework. \
@@ -18,20 +18,26 @@ platforms       darwin
 homepage        http://telepathy.freedesktop.org/wiki/
 master_sites    http://telepathy.freedesktop.org/releases/${name}/
 
-checksums       md5     cc588adca205c61403405622f17510b1 \
-                sha1    ced2905ba43152d634e05efd3c3725bf4c020ec2 \
-                rmd160  e7b1713680517992b5e060f553c4d939775bc1e7
+checksums       md5     6e3e048cbee27aa37a64b8e9cc611664 \
+                sha1    322d2f3e78838fc5254f3c33010e78b7dd5c4513 \
+                rmd160  b7ce97b0f4e2a1c48f2258f121b014e1a9c72062
 
 depends_build   port:pkgconfig \
-                port:gtk-doc
+                port:gtk-doc \
+                port:python26
 
 depends_lib     port:dbus-glib \
                 port:telepathy-glib \
                 port:pidgin
 
-configure.python ${prefix}/bin/python2.5
+#
+# pidgin is not universal
+#
+universal_variant no
 
-configure.args  --disable-shave
+configure.python ${prefix}/bin/python2.6
+
+configure.args  --disable-silent-rules
 
 livecheck.type  regex
 livecheck.url   ${master_sites}
