telepathy-sofiasip: use python26.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70741 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/comms/telepathy-sofiasip/Portfile
+++ b/dports/comms/telepathy-sofiasip/Portfile
@@ -6,6 +6,7 @@ PortSystem      1.0
 name            telepathy-sofiasip
 set sfname      tp-sofiasip
 version         0.5.15
+revision        1
 categories      comms
 maintainers     devans openmaintainer
 platforms       darwin
@@ -26,13 +27,17 @@ checksums       md5     cb953dec2c5374c3161a86b136e27ef5 \
                 sha1    2b189f2f5275bf637f7ee5106d70a81890ce9d11 \
                 rmd160  11a0a2ae4c5146aa3a271c2a666abfe9e298a3c4
 
+use_parallel_build no
+
+patchfiles      patch-configure.diff
+
 depends_build   port:pkgconfig \
                 port:gtk-doc
 
 depends_lib     port:telepathy-glib \
                 port:sofia-sip \
-                port:py25-twisted
+                port:py26-twisted
 
-configure.python ${prefix}/bin/python2.5
+configure.python ${prefix}/bin/python2.6
 
 livecheck.regex "<title>$name .* (\\d+(?:\\.\\d+)*) released.*</title>"
