telepathy-sofiasip: update master_sites, livecheck.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70742 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/comms/telepathy-sofiasip/Portfile
+++ b/dports/comms/telepathy-sofiasip/Portfile
@@ -11,7 +11,7 @@ categories      comms
 maintainers     devans openmaintainer
 platforms       darwin
 homepage        http://tp-sofiasip.sourceforge.net/
-master_sites    sourceforge:${sfname}
+master_sites    http://telepathy.freedesktop.org/releases/${name}
 
 description     Telepathy-SofiaSIP is a SIP connection manager (protocol plugin) \
                 for the Telepathy framework.
@@ -40,4 +40,6 @@ depends_lib     port:telepathy-glib \
 
 configure.python ${prefix}/bin/python2.6
 
-livecheck.regex "<title>$name .* (\\d+(?:\\.\\d+)*) released.*</title>"
+livecheck.type  regex
+livecheck.url   ${master_sites}
+livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
