telepathy-sofiasip: use sourceforge master_sites for now.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70743 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/comms/telepathy-sofiasip/Portfile
+++ b/dports/comms/telepathy-sofiasip/Portfile
@@ -11,7 +11,7 @@ categories      comms
 maintainers     devans openmaintainer
 platforms       darwin
 homepage        http://tp-sofiasip.sourceforge.net/
-master_sites    http://telepathy.freedesktop.org/releases/${name}
+master_sites    sourceforge:${sfname}
 
 description     Telepathy-SofiaSIP is a SIP connection manager (protocol plugin) \
                 for the Telepathy framework.
@@ -41,5 +41,5 @@ depends_lib     port:telepathy-glib \
 configure.python ${prefix}/bin/python2.6
 
 livecheck.type  regex
-livecheck.url   ${master_sites}
+livecheck.url   http://telepathy.freedesktop.org/releases/${name}
 livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
