telepathy-farsight: remove trailing backslash
git-svn-id: https://svn.macports.org/repository/macports/trunk@70745 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/comms/telepathy-farsight/Portfile
+++ b/dports/comms/telepathy-farsight/Portfile
@@ -23,7 +23,7 @@ checksums       md5     1e6af31be4d5cdfc72a3f06542de96c0 \
                 rmd160  0803a38a691093ecc370ebbc4634664c30e6826b
 
 depends_build   port:pkgconfig \
-                port:gtk-doc \
+                port:gtk-doc
 
 depends_lib     port:telepathy-glib \
                 port:farsight2
