--- a/dports/comms/telepathy-sofiasip/Portfile
+++ b/dports/comms/telepathy-sofiasip/Portfile
@@ -4,14 +4,12 @@
 PortSystem      1.0
 
 name            telepathy-sofiasip
-set sfname      tp-sofiasip
-version         0.5.15
-revision        1
+version         0.6.3
 categories      comms
 maintainers     devans openmaintainer
 platforms       darwin
 homepage        http://tp-sofiasip.sourceforge.net/
-master_sites    sourceforge:${sfname}
+master_sites    http://telepathy.freedesktop.org/releases/${name}
 
 description     Telepathy-SofiaSIP is a SIP connection manager (protocol plugin) \
                 for the Telepathy framework.
@@ -23,13 +21,13 @@ long_description \
                 messaging system to provide a simple interface for client applications, \
                 allowing them to quickly take advantage of Telepathy's benefits.
 
-checksums       md5     cb953dec2c5374c3161a86b136e27ef5 \
-                sha1    2b189f2f5275bf637f7ee5106d70a81890ce9d11 \
-                rmd160  11a0a2ae4c5146aa3a271c2a666abfe9e298a3c4
+checksums       md5     178b4a4b499dc322782cb0f2b2c2b5ea \
+                sha1    02346934f0489762f9650bcee072a5fa5c41c420 \
+                rmd160  d57921bd24408eb86f96b4d28677cb16d5070e10
 
 use_parallel_build no
 
-patchfiles      patch-configure.diff
+#patchfiles      patch-configure.diff
 
 depends_build   port:pkgconfig \
                 port:gtk-doc
@@ -41,5 +39,5 @@ depends_lib     port:telepathy-glib \
 configure.python ${prefix}/bin/python2.6
 
 livecheck.type  regex
-livecheck.url   http://telepathy.freedesktop.org/releases/${name}
+livecheck.url   ${master_sites}
 livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
