plplot: addhoc fix seems to be needed for Intel Mac running Leopard as well
git-svn-id: https://svn.macports.org/repository/macports/trunk@70748 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/plplot/Portfile
+++ b/dports/science/plplot/Portfile
@@ -149,7 +149,7 @@ variant g95 conflicts gcc43 gcc44 universal description {Build using g95} {
     configure.args-append   -DCMAKE_Fortran_COMPILER=\"${prefix}/bin/g95\" \
                             -DCMAKE_OSX_DEPLOYMENT_TARGET=\"\"
 # Ad hoc fix to enable build of f95 binding by disabling some features
-    if {${os.arch}=="powerpc"} {
+    if {${os.major}<10} {
         patchfiles-append       patch-sfstubsf95.f90.diff
     }
 }
