update clojure to 1.2
git-svn-id: https://svn.macports.org/repository/macports/trunk@70749 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/clojure/Portfile
+++ b/dports/lang/clojure/Portfile
@@ -4,9 +4,9 @@ PortSystem          1.0
 
 name                clojure
 conflicts           clojure-devel
-version             1.1.0
+version             1.2.0
 epoch               20091231
-revision            1
+revision            0
 categories          lang java
 maintainers         gmail.com:mdippery
 description         The Clojure programming language
@@ -17,11 +17,11 @@ long_description    Clojure is a dynamic programming language for the JVM. \
                     persistent data structures and a macro system.
 homepage            http://clojure.org/
 platforms           darwin
-master_sites        googlecode:clojure
+master_sites        http://github.com/downloads/clojure/clojure/
 
-checksums           md5 9c9e92f85351721b76f40578f5c1a94a \
-                    sha1 c253dd52734a008321a1db34439744a6d02587ea \
-                    rmd160 8cb486181edf2a8e8d9ea061602d396304e503c4
+checksums           md5 da0cc71378f56491d6ee70dee356831f \
+                    sha1 4b0cf4d5d31816c1b7a616f4b74b136b62bd4e35 \
+                    rmd160 80a87879beb0dcd6751ec4f6800cde1eca41d7b6
 
 use_zip             yes
 
@@ -39,21 +39,21 @@ destroot {
     set clojurebindir ${clojuredir}/bin
     set clojurebin ${clojurebindir}/clj
     set clojuresh clj.sh
-    
+
     if {[variant_isset rlwrap]} {
         set clojuresh clj-rlwrap.sh
     }
-    
+
     xinstall -m 0755 -d ${destroot}${javadir}
     xinstall -m 0755 -d ${destroot}${clojuredir}
     xinstall -m 0755 -d ${destroot}${clojurelibdir}
     xinstall -m 0755 -d ${destroot}${clojurebindir}
     xinstall -m 0644 -W ${workpath} clojure-${version}/clojure.jar ${destroot}${clojurelibdir}/clojure.jar
     xinstall -m 0755 -W ${filespath} ${clojuresh} ${destroot}${clojurebin}
-    
+
     if {[variant_isset rlwrap]} {
         xinstall -m 0644 -W ${filespath} .clj_completions  ${destroot}${clojuredir}/.clj_completions
     }
-    
+
     ln -s ${clojurebin} ${destroot}${prefix}/bin/clj
 }
