pspp-devel: update to g7803d3
git-svn-id: https://svn.macports.org/repository/macports/trunk@70755 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/pspp-devel/Portfile
+++ b/dports/math/pspp-devel/Portfile
@@ -4,10 +4,10 @@
 PortSystem          1.0
 
 name                pspp-devel
-set buildstamp      20100813040503
-set buildhash       gf007af
+set buildstamp      20100820040508
+set buildhash       g7803d3
 version             0.7.5
-revision            13
+revision            14
 categories          math
 license             GPLv3+
 maintainers         snc
@@ -37,8 +37,8 @@ depends_lib		    port:gsl \
                     port:libglade2 \
                     port:libtool
 
-checksums           sha1    bb1c45bf8afc565292d29f0cf83fba16648ac55a \
-                    rmd160  bfda95694e7f1e42d6e93d14d26628af60a25997
+checksums           sha1    b1df3ceeec57443f55519586d0d49a467a46dad4 \
+                    rmd160  0ff6a4aab2e83dfa5be54765656d0d6f937e6970
 
 #configure.optflags  -O0
 #configure.cflags-append -g
