editors/vim: Remove explicit gnutar dependency which is no longer required
git-svn-id: https://svn.macports.org/repository/macports/trunk@70757 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/editors/vim/Portfile
+++ b/dports/editors/vim/Portfile
@@ -6,6 +6,7 @@ name                vim
 set vim_version     7.3
 set vim_patchlevel  3
 version             ${vim_version}.${vim_patchlevel}
+revision            1
 categories          editors
 maintainers         raimue
 description         Vi \"workalike\" with many additional features
@@ -48,8 +49,7 @@ checksums-append \
     7.3.002 md5 2949cbdfe86f533c487fd144c5935c7a \
     7.3.003 md5 9059db41cf3a468935745242cb9c0514
 
-depends_build       bin:gnutar:gnutar \
-                    bin:grep:grep
+depends_build       bin:grep:grep
 depends_lib         port:ncurses \
                     port:libiconv \
                     port:ctags
