gconfmm: update to version 2.28.2.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70759 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gconfmm/Portfile
+++ b/dports/gnome/gconfmm/Portfile
@@ -3,25 +3,31 @@
 
 PortSystem 1.0
 
-name		gconfmm
-version		2.24.0
-set branch  [join [lrange [split ${version} .] 0 1] .]
-description	gconfmm provides C++ wrappers for gconf.
-long_description        ${description}
-maintainers	nomaintainer
-categories	gnome
-platforms	darwin
-homepage	http://www.gtkmm.org/
-master_sites	gnome:sources/${name}/${branch}/
-use_bzip2	yes
+name            gconfmm
+version         2.28.2
+set branch      [join [lrange [split ${version} .] 0 1] .]
 
-checksums 	md5     cd2c3c919dbf8f90f703680d2fa088b2 \
-		    sha1    1c130b3311c8307037126050bbfb4f8faa28819a \
-		    rmd160  933c045f1b6f71f5b6ecc9e73ac29d2f787f56d0
+description     gconfmm provides C++ wrappers for gconf.
 
-depends_lib	port:gtkmm \
-            port:gconf \
-            port:libiconv
+long_description \
+                ${description}
+
+maintainers     nomaintainer
+categories      gnome
+platforms       darwin
+homepage        http://www.gtkmm.org/
+master_sites    gnome:sources/${name}/${branch}/
+use_bzip2       yes
+
+checksums       md5     cca6d249ab766895e1a180b7a4775733 \
+                sha1    5d3ab360bb182197226355bf4120553161df04b7 \
+                rmd160  2b4a37791ceddc299df8a0c33a900d2daff915a3
+
+depends_build   port:pkgconfig \
+                path:bin/perl:perl5
+
+depends_lib     port:glibmm \
+                port:gconf
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
