gnome-bindings-cxx: update to version 2.30.2.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70764 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gnome-bindings-cxx/Portfile
+++ b/dports/devel/gnome-bindings-cxx/Portfile
@@ -1,37 +1,46 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem	1.0
+PortSystem      1.0
 
-name		gnome-bindings-cxx
-version		2.26.3
-categories	devel gnome
+name        	gnome-bindings-cxx
+version	        2.30.2
+categories      devel gnome
 platforms       darwin
-maintainers	nomaintainer
-description	The GNOME bindings for C++
-long_description	The GNOME bindings is the set of libraries that allow developers to develop fully GNOME compliant applications in C#, C++, Java, Perl, and Python. The platform is one of the suites of software packages that form the complete GNOME project offerings. NOTE: the GNOME Java bindings have yet to be ported to Mac OS X.
-homepage	http://www.gnome.org/
+maintainers     nomaintainer
+description     The GNOME bindings for C++
+long_description \
+                The GNOME bindings is the set of libraries that allow developers to \
+                develop fully GNOME compliant applications in C#, C++, Java, Perl, and \
+                Python. The platform is one of the suites of software packages that form \
+                the complete GNOME project offerings. These are the GNOME bindings for C++.
 
-depends_lib	port:libsigcxx2	\
-		port:libxmlxx2 \
-		port:glibmm	\
-		port:gtkmm	\
-		port:libgnomemm	\
-		port:libgnomeuimm	\
-		port:libgnomecanvasmm	\
-		port:libglademm	\
-		port:gnome-vfsmm	\
-		port:gconfmm
+homepage        http://www.gnome.org/
+
+depends_lib     port:gconfmm \
+                port:glibmm \
+                port:gnome-vfsmm \
+                port:gtkmm \
+                port:libglademm \
+                port:libgnomecanvasmm \
+                port:libgnomemm \
+                port:libgnomeuimm \
+                port:libsigcxx2 \
+                port:libxmlxx2 \
+                port:mm-common \
+                port:pangomm
 
 distfiles
 
+universal_variant no
+
 use_configure   no
 
-build           { }
+build           {}
 
 destroot        {
-	file mkdir ${destroot}${prefix}/share/doc/
-	system "echo ${long_description} > ${destroot}${prefix}/share/doc/README.${name}.txt"
+    file mkdir ${destroot}${prefix}/share/doc/
+    system "echo ${long_description} > ${destroot}${prefix}/share/doc/README.${name}.txt"
 }
 
 livecheck.type  none
