--- a/dports/editors/vim-app/Portfile
+++ b/dports/editors/vim-app/Portfile
@@ -7,6 +7,7 @@ set realname        vim
 set vim_version     7.3
 set vim_patchlevel  3
 version             ${vim_version}.${vim_patchlevel}
+revision            1
 categories          editors
 maintainers         raimue
 description         Vim.app is a GUI version of the famous editor vim.
@@ -56,8 +57,7 @@ checksums-append \
     7.3.002 md5 2949cbdfe86f533c487fd144c5935c7a \
     7.3.003 md5 9059db41cf3a468935745242cb9c0514
 
-depends_build       bin:gnutar:gnutar \
-                    bin:grep:grep
+depends_build       bin:grep:grep
 depends_lib         port:ncurses \
                     port:libiconv \
                     port:ctags
@@ -148,7 +148,7 @@ variant perl description {Enable Perl scripting} {
     depends_lib-append      path:bin/perl:perl5
 }
 variant python requires python25 description {Compatibility variant, requires +python25} {}
-variant python25 conflicts python26 python31 description {Enable Python scripting} {
+variant python25 conflicts python26 python27 python31 description {Enable Python scripting} {
     configure.args-append   --enable-pythoninterp --with-python=${prefix}/bin/python2.5
     patchfiles-append       patch-python.diff
     depends_lib-append      port:python25
@@ -157,7 +157,7 @@ variant python25 conflicts python26 python31 description {Enable Python scriptin
     # Overwriting autoconf.cmd above removes dependency, add it again
     depends_build-append port:autoconf
 }
-variant python26 conflicts python25 python31 description {Enable Python scripting} {
+variant python26 conflicts python25 python27 python31 description {Enable Python scripting} {
     configure.args-append   --enable-pythoninterp --with-python=${prefix}/bin/python2.6
     patchfiles-append       patch-python.diff
     depends_lib-append      port:python26
@@ -166,7 +166,16 @@ variant python26 conflicts python25 python31 description {Enable Python scriptin
     # Overwriting autoconf.cmd above removes dependency, add it again
     depends_build-append port:autoconf
 }
-variant python31 conflicts python25 python26 description {Enable Python scripting} {
+variant python27 conflicts python25 python26 python31 description {Enable Python scripting} {
+    configure.args-append   --enable-pythoninterp --with-python=${prefix}/bin/python2.7
+    patchfiles-append       patch-python.diff
+    depends_lib-append      port:python27
+
+    use_autoconf yes
+    # Overwriting autoconf.cmd above removes dependency, add it again
+    depends_build-append port:autoconf
+}
+variant python31 conflicts python25 python26 python27 description {Enable Python scripting} {
     configure.args-append   --enable-python3interp --with-python=${prefix}/bin/python3.1
     patchfiles-append       patch-python3.diff
     depends_lib-append      port:python31
