--- a/dports/devel/gnome-bindings-python/Portfile
+++ b/dports/devel/gnome-bindings-python/Portfile
@@ -3,24 +3,31 @@
 PortSystem	1.0
 
 name		gnome-bindings-python
-version		2.26.3
+version		2.30.2
 categories	devel gnome
 platforms       darwin
 maintainers	nomaintainer
 description	The GNOME bindings for Python
-long_description	The GNOME bindings is the set of libraries that allow developers to develop fully GNOME compliant applications in C#, C++, Java, Perl, and Python. The platform is one of the suites of software packages that form the complete GNOME project offerings. NOTE: the GNOME Java bindings have yet to be ported to Mac OS X.
+
+long_description \
+                The GNOME bindings is the set of libraries that allow developers to \
+                develop fully GNOME compliant applications in C#, C++, Java, Perl, and \
+                Python. The platform is one of the suites of software packages that form \
+                the complete GNOME project offerings. These are the GNOME bindings for Python.
+
 homepage	http://www.gnome.org/
 
-depends_lib	port:py25-gobject \
-		port:py25-gtk \
-		port:py25-gnome \
-		port:py25-orbit
+depends_lib     port:py26-atspi \
+                port:py26-gnome \
+                port:py26-gobject \
+                port:py26-gtk \
+                port:py26-orbit
 
 distfiles
 
 use_configure   no
 
-build           { }
+build           {}
 
 destroot        {
 	file mkdir ${destroot}${prefix}/share/doc/
