gnome-bindings-perl5: update to version 2.30.2.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70775 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gnome-bindings-perl5/Portfile
+++ b/dports/devel/gnome-bindings-perl5/Portfile
@@ -4,29 +4,34 @@
 PortSystem	1.0
 
 name		gnome-bindings-perl5
-version		2.26.3
+version		2.30.2
 categories	devel gnome
 maintainers	nomaintainer
 platforms       darwin
 description	The GNOME bindings for Perl
-long_description	The GNOME bindings is the set of libraries that allow developers to develop fully GNOME compliant applications in C#, C++, Java, Perl, and Python. The platform is one of the suites of software packages that form the complete GNOME project offerings. NOTE: the GNOME Java bindings have yet to be ported to Mac OS X.
+
+long_description \
+                The GNOME bindings is the set of libraries that allow developers to \
+                develop fully GNOME compliant applications in C#, C++, Java, Perl, and \
+                Python. The platform is one of the suites of software packages that form \
+                the complete GNOME project offerings. These are the GNOME bindings for Perl.
+
 homepage	http://www.gnome.org/
 
 depends_lib	port:p5-glib	\
-		port:p5-gtk2	\
-		port:p5-gnome2	\
 		port:p5-gnome2-canvas	\
 		port:p5-gnome2-gconf	\
-		port:p5-gnome2-print    \
                 port:p5-gnome2-vfs	\
-		port:p5-gnome2-wnck     \
-                port:p5-gtk2-gladexml
+		port:p5-gnome2	\
+                port:p5-gtk2-gladexml \
+		port:p5-gtk2	\
+                port:p5-pango
 
 distfiles
 
 use_configure   no
 
-build           { }
+build           {}
 
 destroot        {
 	file mkdir ${destroot}${prefix}/share/doc/
