--- a/dports/devel/gnome-bindings-suite/Portfile
+++ b/dports/devel/gnome-bindings-suite/Portfile
@@ -4,7 +4,7 @@
 PortSystem      1.0
 
 name            gnome-bindings-suite
-version         2.26.3
+version         2.30.2
 categories      devel gnome
 platforms       darwin
 maintainers     nomaintainer
@@ -18,8 +18,7 @@ master_sites    gnome
 
 depends_lib     port:gnome-bindings-cxx    \
                 port:gnome-bindings-perl5    \
-                port:gnome-bindings-python \
-                port:gnome-sharp2
+                port:gnome-bindings-python
 
 distfiles
 
