sendfile: follow upstream stealth update, and add upstream's internal revision number to version (#21214)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70782 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/sendfile/Portfile
+++ b/dports/net/sendfile/Portfile
@@ -1,9 +1,12 @@
 # $Id$
 
 PortSystem 1.0
+
 name			sendfile
-version			2.1b
-revision		1
+# upstream doesn't change the filename for revision changes
+set up_version  2.1b
+set up_revision 20091007
+version			${up_version}-${up_revision}
 categories		net
 platforms		darwin
 maintainers		nomaintainer
@@ -18,11 +21,12 @@ long_description	Sendfile is a SAFT implementation for UNIX and serves as a tool
 			sendmsg - a client for sending one-line text messages \
 			receive - a client for receiving spooled files
 
-dist_subdir		${name}/${version}_${revision}
+distname        ${name}-${up_version}
+dist_subdir		${name}/${version}
 master_sites		http://fex.rus.uni-stuttgart.de/download/
-checksums		md5 671cd95971c53066a9d0fa66ac04e813 \
-			sha1 3126ba04943e37dd4589edd6c5bc5d7f44ca8488 \
-			rmd160 541619db34a9dbfdd85d5d1c2fc235e426e26087
+checksums		md5 ea87edf5923f41efbe40dab5b4ef38b0 \
+			sha1 cd0ee8eb2865c3320529b45812f96805c357bc35 \
+			rmd160 2095f4252db0f15f358e969460d61f29d90e8fad
 
 patchfiles		patch-makeconfig.diff patch-sendfiled.c.diff
 
