sendfile: use notes
git-svn-id: https://svn.macports.org/repository/macports/trunk@70783 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/sendfile/Portfile
+++ b/dports/net/sendfile/Portfile
@@ -78,13 +78,11 @@ post-destroot {		system "cd '${destroot}${prefix}/bin' && ln -s utf7encode utf7d
 			}
 
 # Notify the user how to launch the sendfile daemon
-post-install {		ui_msg "\nFor being able to receive files, you'll have to use either"
-			ui_msg "xinetd or inetd, depending on what you are using.\n"
-			ui_msg "Use the following line if you'll go for inetd:"
-			ui_msg "saft stream tcp nowait root /path/to/sendfiled sendfiled\n"
-			ui_msg "For xinetd, just take a service file as an example.\n"
-			ui_msg "If you're running Mac OS X 10.2 or Darwin 6.x, you should"
-			ui_msg "add an entry in /etc/services to allow connections from and to"
-			ui_msg "port 487 both udp and tcp.\n"
-                        }
-
+notes "For being able to receive files, you'll have to use either
+xinetd or inetd, depending on what you are using.\n
+Use the following line if you'll go for inetd:
+saft stream tcp nowait root /path/to/sendfiled sendfiled\n
+For xinetd, just take a service file as an example.\n
+If you're running Mac OS X 10.2 or Darwin 6.x, you should
+add an entry in /etc/services to allow connections from and to
+port 487 both udp and tcp."
