--- a/dports/perl/p5-macosx-file/Portfile
+++ b/dports/perl/p5-macosx-file/Portfile
@@ -14,7 +14,7 @@ long_description	MacOSX::File is a collection of Perl modules that \
 					SetFile without calling these binaries.
 checksums		md5 c63681cb87eb52df07d78897283bd493
 platforms		darwin
-suported_archs	i386 ppc
+supported_archs	i386 ppc
 
 patchfiles		patch-Copy-Copy.pm.diff \
 				patch-Copy-filecopy.c.diff
